fix assests in tests

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -8,11 +8,11 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/4.0.0-beta.1/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../docs/4.0.0-beta.1/assets/js/vendor/popper.min.js"></script>
+<script type="text/javascript" src="../../site/assets/4.0/js/vendor/jquery.slim.min.js"></script>
+<script type="text/javascript" src="../../site/assets/4.0/js/vendor/popper.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
 
-<script type="text/javascript" src="../../docs/4.0.0-beta.1/assets/js/vendor/holder.min.js"></script>
+<script type="text/javascript" src="../../site/assets/4.0/js/vendor/holder.min.js"></script>
 <script type="text/javascript">
 Holder.addTheme("gray", {
     bg: "#999",
@@ -1441,9 +1441,9 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Embed responsive</h3>
 <div class="video-sample">
     <div class="embed-fluid">
-        <video poster="../../docs/4.0.0-beta.1/assets/video/niagara_falls.jpg" controls>
-            <source src="../../docs/4.0.0-beta.1/assets/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../../docs/4.0.0-beta.1/assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+        <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
+            <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4" />
+            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
             <p>HTML5 video not supported</p>
         </video>
     </div>
@@ -1452,9 +1452,9 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Embed responsive - in flex element</h3>
 <div class="video-sample" style="display: flex;">
     <div class="embed-fluid">
-        <video poster="../../docs/4.0.0-beta.1/assets/video/niagara_falls.jpg" controls>
-            <source src="../../docs/4.0.0-beta.1/assets/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../../docs/4.0.0-beta.1/assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+        <video poster="../../site/assets/4.0/video/niagara_falls.jpg" controls>
+            <source src="../../site/assets/4.0/video/niagara_falls.mp4" type="video/mp4" />
+            <track src="../../site/assets/4.0/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
             <p>HTML5 video not supported</p>
         </video>
     </div>
@@ -2782,9 +2782,7 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card</h3>
 <div class="card-sample">
     <div class="card">
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -2796,9 +2794,7 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card - content types</h3>
 <div class="card-sample">
     <div class="card">
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -2823,9 +2819,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 
     <div class="card">
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
@@ -2845,9 +2839,7 @@ Showing a <kbd>kdb sample</kbd>
         <h4 class="card-title">Card title</h4>
         <h6 class="card-subtitle text-muted">Support card subtitle</h6>
       </div>
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img" alt="Placeholder image">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="card-link">Card link</a>
@@ -2965,9 +2957,7 @@ Showing a <kbd>kdb sample</kbd>
 
     <h3>Card - image caps</h3>
     <div class="card">
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -2980,9 +2970,7 @@ Showing a <kbd>kdb sample</kbd>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-bottom" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-bottom" alt="Placeholder image">
     </div>
 
     <div class="card" style="width: 18rem;">
@@ -2990,7 +2978,7 @@ Showing a <kbd>kdb sample</kbd>
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a card with text and a nested image.</p>
         <div class="card-img mb-0_5">
-          <img class="img-fluid" src="../../docs/4.0.0-beta.1/assets/img/test.gif" alt="Card image">
+          <img class="img-fluid" src="../../site/assets/4.0/img/test.gif" alt="Card image">
         </div>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
@@ -2998,9 +2986,7 @@ Showing a <kbd>kdb sample</kbd>
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
       <div class="card-img-overlay text-white">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3165,9 +3151,7 @@ Showing a <kbd>kdb sample</kbd>
 <div class="card-sample">
     <div class="card-group">
       <div class="card">
-        <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+        <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3175,9 +3159,7 @@ Showing a <kbd>kdb sample</kbd>
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-        </div>
+        <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3185,9 +3167,7 @@ Showing a <kbd>kdb sample</kbd>
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-        </div>
+        <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3200,9 +3180,7 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card deck</h3>
 <div class="card-deck">
   <div class="card">
-    <div class="card-img">
-      <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-    </div>
+    <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3210,9 +3188,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img">
-      <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-    </div>
+    <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3220,9 +3196,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img">
-      <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-    </div>
+    <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3258,9 +3232,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <div class="card-columns">
   <div class="card">
-    <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+      <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     <div class="card-body">
       <h4 class="card-title">Card title that wraps to a new line</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3278,9 +3250,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+    <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3300,9 +3270,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img">
-        <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
-      </div>
+     <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
   </div>
   <div class="card text-end">
     <div class="card-body">
