--- a/test/visual/card.html
+++ b/test/visual/card.html
@@ -12,7 +12,7 @@
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../dist/js/figuration.js"></script>
 
-<script src="../../docs/4.0.0-beta.1/assets/js/vendor/holder.min.js"></script>
+<script src="../../site/assets/4.0/js/vendor/holder.min.js"></script>
 <script>
 Holder.addTheme("gray", {
     bg: "#999",
@@ -71,9 +71,7 @@ Holder.addTheme("gray", {
 
     <div class="card card-horizontal">
         <div class="card-col col-5">
-            <div class="card-img">
-                <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-            </div>
+            <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
         </div>
         <div class="card-col col">
             <div class="card-header">Header</div>
@@ -84,9 +82,7 @@ Holder.addTheme("gray", {
 
     <div class="card card-horizontal-sm">
         <div class="card-col col-sm-5">
-            <div class="card-img">
-                <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-            </div>
+            <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
         </div>
         <!-- using `.col-sm` due to pixel rounding -->
         <div class="card-col col-sm">
@@ -98,9 +94,7 @@ Holder.addTheme("gray", {
 
     <div class="card card-horizontal-md-reverse">
         <div class="card-col col-md-5">
-            <div class="card-img">
-                <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-            </div>
+            <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
         </div>
         <div class="card-col col-md">
             <div class="card-header">Header</div>
@@ -116,9 +110,7 @@ Holder.addTheme("gray", {
             <div class="card-footer">Footer</div>
         </div>
         <div class="card-col col-lg-5">
-            <div class="card-img">
-                <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-            </div>
+            <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
         </div>
     </div>
 
@@ -129,9 +121,7 @@ Holder.addTheme("gray", {
             <div class="card-footer">Footer</div>
         </div>
         <div class="card-col col-xl-5">
-            <div class="card-img">
-                <img src="../../docs/4.0.0-beta.1/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
-            </div>
+            <img src="../../site/assets/4.0/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
         </div>
     </div>
 </div>
@@ -147,9 +137,7 @@ Holder.addTheme("gray", {
 
     <div class="card-deck-sm">
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -157,9 +145,7 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -175,9 +161,7 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -224,9 +208,7 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <div class="card-img">
-            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -234,9 +216,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -252,9 +232,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -299,9 +277,7 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <div class="card-img">
-            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -317,9 +293,7 @@ Holder.addTheme("gray", {
     <h3>Deck</h3>
     <div class="card-deck-md">
       <div class="card">
-        <div class="card-img">
-          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -329,9 +303,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -341,9 +313,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -358,9 +328,7 @@ Holder.addTheme("gray", {
 
     <div class="card-group-md">
       <div class="card">
-        <div class="card-img">
           <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -370,9 +338,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -382,9 +348,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img">
-          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-        </div>
+        <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -401,18 +365,14 @@ Holder.addTheme("gray", {
 
     <div class="card-deck card-deck-col">
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <div class="card">
@@ -426,18 +386,14 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <div class="card-img">
-                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
-            </div>
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
