--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -7,7 +7,7 @@
 <title>Figuration - Button Group</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
-<link rel="stylesheet" href="../../docs/4.0.0-beta.1/assets/fonts/fontawesome/css/all.min.css">
+<link rel="stylesheet" href="../../site/assets/4.0/fonts/fontawesome/css/all.min.css">
 
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
