--- a/test/visual/media-object.html
+++ b/test/visual/media-object.html
@@ -12,7 +12,7 @@
 <script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../dist/js/figuration.js"></script>
 
-<script src="../../docs/4.0.0-beta.1/assets/js/vendor/holder.min.js"></script>
+<script src="../../site/assets/4.0/js/vendor/holder.min.js"></script>
 <script>
 Holder.addTheme("gray", {
     bg: "#999",
