--- a/site/4.0/examples/grid/index.html
+++ b/site/4.0/examples/grid/index.html
@@ -55,12 +55,12 @@ h2 {
 
     <h3>Fixed-Width Container</h3>
 </div>
-<div class="container example-container">.container-sm</div>
+<div class="container example-container">.container</div>
 
 <div class="container">
     <h3>Fluid-Width Container</h3>
 </div>
-<div class="container-fluid example-container">.container-sm</div>
+<div class="container-fluid example-container">.container-fluid</div>
 
 <div class="container">
     <h3>Responsive Containers</h3>
