--- a/site/4.0/content/index.html
+++ b/site/4.0/content/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/content/reboot/"
+usePathVersion: true
+destination: "content/reboot/"
 sitemapIgnore: true
 ---
