--- a/site/4.0/examples/index.html
+++ b/site/4.0/examples/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/get-started/examples/"
+usePathVersion: true
+destination: "get-started/examples/"
 sitemapIgnore: true
 ---
