--- a/site/4.0/utilities/index.html
+++ b/site/4.0/utilities/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/utilities/borders/"
+usePathVersion: true
+destination: "utilities/borders/"
 sitemapIgnore: true
 ---
