--- a/site/4.0/widgets/index.html
+++ b/site/4.0/widgets/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/widgets/overview/"
+usePathVersion: true
+destination: "widgets/overview/"
 sitemapIgnore: true
 ---
