--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,8 @@ layout: home
             Current version: <strong>{{ site.version.current }}</strong>
             <br />
             <a href="{{ site.changelog }}" class="text-light small">Read the Changelog</a>
+            <br />
+            <a href="{{ site.path }}/{{ site.version.docs }}/get-started/migration/" class="text-light small">View v3 to v4 migration notes</a>
           </div>
         </div>
       </div>
